--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,8 @@
+# 正确结构示例
+events {
+    worker_connections 1024;
+}
+http {
 server {
     listen 80;
     server_name localhost;
@@ -16,4 +21,5 @@ server {
     }
  
  
+}
 }
