--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,8 @@
+user  nginx;
+worker_processes  auto;
+
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
 # 正确结构示例
 events {
     worker_connections 1024;
