--- a/nginx.conf
+++ b/nginx.conf
@@ -1,30 +1,15 @@
-user  nginx;
-worker_processes  auto;
-
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
-# 正确结构示例
-events {
-    worker_connections 1024;
-}
-http {
 server {
     listen 80;
-    server_name localhost;
-    # 关键修改：设置根目录为PHP文件所在路径
-    root /var/www/html/php;
-    index index.php index.html index.htm;
-    
+    root /var/www/html/php;  # 确保路径正确
+    index index.php info.php;  # 添加默认索引文件
 
-    # PHP 配置（简化版）
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
     location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/run/php/php8.1-fpm.sock;  # 确保路径精确匹配
-        fastcgi_index index.php;
+        fastcgi_pass php:9000;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
- 
- 
-}
 }
